# sonic_poc_official_image

./: .gitignore  Dockerfile.bsp-demo  Dockerfile.bsp-demo-real  Dockerfile.mgmt  Dockerfile.sai-demo  Dockerfile.sai-demo-real  Dockerfile.sonic-cpp  Dockerfile.sonic-cpp-tests  Dockerfile.sonic-mgmt  Dockerfile.sonic-mgmt-real  Dockerfile.sonic-vs-alt  Dockerfile.sonic-vs-real  Makefile.cpp  README.md  SONIC_POC_Documentation.md  build-sonic-official.sh  docker-compose-real-sonic.yml  docker-compose-sonic-official.yml  docker-compose-sonic-simple.yml  docker-compose.yml  requirements-bsp-demo.txt  requirements-mgmt.txt  requirements-sai-demo.txt  requirements-sonic.txt  requirements-test.txt  run_cpp_tests.sh  supervisord-mgmt.conf  supervisord-sonic-vs.conf  supervisord-sonic.conf  supervisord-test.conf  test_cpp_build.sh
scripts/bsp/: platform_monitor.sh
scripts/sonic/: health_check.sh  mock-orchagent.py  mock-sonic-cli.py  mock-syncd.py  start_sonic.sh
src/cpp/: CMakeLists.txt  main.cpp
src/cpp/bsp/: led_controller.cpp  led_controller.h  platform_api.cpp  platform_api.h  platform_health_monitor.cpp  platform_health_monitor.h
src/cpp/common/: logger.cpp  logger.h  utils.cpp  utils.h
src/cpp/demos/: bsp_demo.cpp  sai_demo.cpp
src/cpp/hal/: sonic_hal_controller.cpp  sonic_hal_controller.h
src/cpp/interrupts/: sonic_interrupt_controller.cpp  sonic_interrupt_controller.h
src/cpp/mock/: mock_sai.cpp  mock_sai.h
src/cpp/sai/: sai_adapter.cpp  sai_adapter.h  sai_command_processor.cpp  sai_port_manager.cpp  sai_port_manager.h  sai_redis.cpp  sai_redis.h  sai_route_manager.cpp  sai_route_manager.h  sai_vlan_manager.cpp  sai_vlan_manager.h  sonic_sai_controller.cpp  sonic_sai_controller.h
src/cpp/swss/: orchagent.cpp  orchagent.h
src/cpp/tests/: main_test_runner.cpp  sonic_functional_tests.cpp  sonic_functional_tests.h
src/python/: bsp_api.py  metrics_exporter.py  platform_api_wrapper.py  sai_api.py  sonic_bsp_demo.py  sonic_cli_wrapper.py  sonic_mgmt_api.py  sonic_redis_client.py  sonic_sai_demo.py  test_runner.py
